fix: issue with the mobile header visible for the wider screens (#5)
* fix: issue with the mobile header visible for the wider screens

Closes ZKF-1769

* fix: width of the mobile / desktop aligned

* refactor: changed a little bit sizing for mobile/desktop styles

* Update _default.scss

--- a/src/assets/style/_default.scss
+++ b/src/assets/style/_default.scss
@@ -44,7 +44,13 @@ input[type="number"] {
 }
 
 .desktopOnly {
-  @media screen and (max-width: $mobile+1) {
+  @media screen and (max-width: $mobile) {
+    display: none !important;
+  }
+}
+
+@media (min-width: $mobile+1) {
+  .mobileOnly {
     display: none !important;
   }
 }
